Fix wrapping on completion

--- a/popup.css
+++ b/popup.css
@@ -425,7 +425,7 @@ a, input, textarea {
 
 
 #success, #error {
-  width: 175px;
+  width: 170px;
   display: inline-block;
   vertical-align: middle;
   margin-left: 15px;
